--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <html ng-app>
   <head>
+    <base href="https://tiuhti.net/ankerias/">
     <title>Ankerias</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="js/ankerias.js"></script>
